--- a/menus.html
+++ b/menus.html
@@ -28,7 +28,7 @@
         <div class="logo"><a href="#"><img src="images/logo.png" alt="logo"><strong> freshly restaurant </strong> </a>
         </div>
         <nav>
-            <a href="home.html"> Home</a>
+            <a href="index.html"> Home</a>
             <a href="about.html">About</a>
             <a href="menus.html">Menus</a>
             <a href="contact_us.html">Contact</a>
