--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 </head>
 <body>
     <header>
-        <div class="logo"><a href="#"><img src="images/logo.png" alt="logo"><strong> freshly restaurant </strong> </a>
+        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"><strong> freshly restaurant </strong> </a>
         </div>
         <nav>
-            <a href="home.html" > Home</a>
+            <a href="index.html" > Home</a>
             <a href="about.html"> About</a>
             <a href="menus.html">Menus</a>
             <a href="contact_us.html">Contact</a>
